MPIR-123: Hungarian language bundle - encoding problems and improvements
o applied r556753

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@676452 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_hu.properties
+++ b/src/main/resources/project-info-report_hu.properties
@@ -121,7 +121,7 @@ report.issuetracking.name=Hibak\u00f6vet\u00e9s
 report.issuetracking.description=Link a projekt hibak\u00f6vet\u0151 rendszer\u00e9re:
 report.issuetracking.noissueManagement=Nincs hibak\u00f6vet\u0151 rendszer megadva, l\u00e1togass vissza k\u00e9s\u0151bb!
 report.issuetracking.overview.title=\u00c1ttekint\u00e9s
-report.issuetracking.jira.intro=Ez a projekt {Jira, http://www.atlassian.com/software/jira} hibak\u00f6vet\u0151 rendszert haszn\u00e1l, amely J2EE alap\u00fa.
+report.issuetracking.jira.intro=Ez a projekt {JIRA, http://www.atlassian.com/software/jira} hibak\u00f6vet\u0151 rendszert haszn\u00e1l, amely J2EE alap\u00fa.
 report.issuetracking.bugzilla.intro=Ez a projekt {Bugzilla, http://www.bugzilla.org/} hibak\u00f6vet\u0151 rendszert haszn\u00e1l.
 report.issuetracking.scarab.intro=Ez a projekt {Scarab, http://scarab.tigris.org/} hibak\u00f6vet\u0151 rendszert haszn\u00e1l.
 report.issuetracking.general.intro=Ez a projekt hibak\u00f6vet\u0151 rendszert haszn\u00e1l a hib\u00e1k \u00e9s feladatok k\u00f6vet\u00e9s\u00e9re.
