MPIR-123: Hungarian language bundle - encoding problems and improvements
o applied r574088

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@676454 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_hu.properties
+++ b/src/main/resources/project-info-report_hu.properties
@@ -105,7 +105,7 @@ report.scm.devaccess.clearcase.intro=A projekt fejleszt\u0151i a k\u00f6vetkez\u
 report.scm.devaccess.cvs.intro=Csak a projekt fejleszt\u0151i f\u00e9rhetnek hozz\u00e1 ezzel a m\u00f3dszerrel. Helyettes\u00edtsd be a megfelel\u0151 nevet!
 report.scm.devaccess.perforce.intro=Csak a projekt fejleszt\u0151i f\u00e9rhetnek hozz\u00e1 ezzel a m\u00f3dszerrel. Helyettes\u00edtsd be a megfelel\u0151 nevet!
 report.scm.devaccess.starteam.intro=Csak a projekt fejleszt\u0151i f\u00e9rhetnek hozz\u00e1 ezzel a m\u00f3dszerrel. Helyettes\u00edtsd be a megfelel\u0151 nevet!
-report.scm.devaccess.svn.intro1=HTTPS protokolon kereszt\u00fcl b\u00e1rki el\u00e9rheti a Subversion rendszert, de a fejleszt\u0151k kell hogy haszn\u00e1lj\u00e1k.
+report.scm.devaccess.svn.intro1.https=HTTPS protokolon kereszt\u00fcl b\u00e1rki el\u00e9rheti a Subversion rendszert, de a fejleszt\u0151k kell hogy haszn\u00e1lj\u00e1k.
 report.scm.devaccess.svn.intro2=V\u00e1ltoz\u00e1sok v\u00e9grehajt\u00e1s\u00e1hoz haszn\u00e1ld a k\u00f6vetkez\u0151 parancsot (az svn parancs k\u00e9rni fogja a jelszavad):
 report.scm.devaccess.general.intro=A verzi\u00f3k\u00f6vet\u0151 rendszer dokument\u00e1ci\u00f3j\u00e1ban megtal\u00e1lod hogy olvashatod ki a forr\u00e1sk\u00f3dot. A hozz\u00e1f\u00e9r\u00e9s URL-je:
 report.scm.accessbehindfirewall.title=Hozz\u00e1f\u00e9r\u00e9s t\u0171zfal m\u00f6g\u0171l
