o added French missing  keys
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@676576 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -218,3 +218,20 @@ report.team-list.title                                             = Liste des m
 report.transitivedependencies.intro                                = Ce qui suit est la liste des d\u00e9pendances transitives pour ce projet. Les d\u00e9pendances transitives sont les d\u00e9pendances des d\u00e9pendances du projet :
 report.transitivedependencies.nolist                               = Il n\u0092y a aucune d\u00e9pendance transitive pour ce projet.
 report.transitivedependencies.title                                = D\u00e9pendances transitives du projet
+report.dependencyManagement.name                                   = Gestion des d\u00e9pendances
+report.dependencyManagement.description                            = Ce document liste les d\u00e9pendances d\u00e9finies \u00e0 travers dependencyManagement.
+report.dependencyManagement.title                                  = Gestion des d\u00e9pendances du project
+report.dependencyManagement.nolist                                 = Il n\u0092y a aucune d\u00e9pendance d\u00e9finie dans DependencyManagement.
+report.dependencyManagement.column.groupId                         = GroupId
+report.dependencyManagement.column.artifactId                      = ArtifactId
+report.dependencyManagement.column.version                         = Version
+report.dependencyManagement.column.classifier                      = Classifier
+report.dependencyManagement.column.type                            = Type
+report.dependencyManagement.intro.compile                          = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e compile pour ce projet. Ces d\u00e9pendances sont requises pour compiler et ex\u00e9cuter l\u0092application :
+report.dependencyManagement.intro.provided                         = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e provided pour ce projet. Ces d\u00e9pendances sont requises pour compiler l\u0092application, mais devraient \u00eatre fournies par d\u00e9faut lors de l\u0092utilisation de cette librairie :
+report.dependencyManagement.intro.runtime                          = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e runtime pour ce projet. Ces d\u00e9pendances sont requises pour ex\u00e9cuter l\u0092application :
+report.dependencyManagement.intro.system                           = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e system pour ce projet. Ces d\u00e9pendances sont requises pour compiler l\u0092application :
+report.dependencyManagement.intro.test                             = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e test pour ce projet. Ces d\u00e9pendances sont requises seulement pour compiler et ex\u00e9cuter les tests unitaires de l\u0092application :
+report.pluginManagement.name                                       = Gestion des plugins
+report.pluginManagement.description                                = Ce document liste les plugins d\u00e9finis \u00e0 travers plugins.
+report.pluginManagement.title                                      = Gestion des plugins du project
