MPIR-125: Create a plugin report
o first implementation
o added some keys

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@676578 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -235,3 +235,9 @@ report.dependencyManagement.intro.test                             = Ce qui suit
 report.pluginManagement.name                                       = Gestion des plugins
 report.pluginManagement.description                                = Ce document liste les plugins d\u00e9finis \u00e0 travers plugins.
 report.pluginManagement.title                                      = Gestion des plugins du project
+report.plugins.name                                                = Plugins du projets
+report.plugins.description                                         = Ce document liste les plugins de type build et rapport utilis\u00e9s par ce projet.
+report.plugins.title                                               = Plugins du projet de type build
+report.plugins.report.title                                        = Plugins du projet de type rapport
+report.plugins.nolist                                              = Il n\u0092y a aucun plugin de type build d\u00e9fini dans la partie Build du projet.
+report.plugins.report.nolist                                       = Il n\u0092y a aucun plugin de type rapport d\u00e9fini dans la partie Reporting du projet.
