o take care if the repo is blacklisted or not o ping repo url before calling wagon to prevent TransferFailedException o display stacktrace for error logs in dependencyExistsInRepo() only if log is in debug mode o added a new Blacklisted column in Dependency Repository Locations table
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@676627 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -73,7 +73,10 @@ report.dependencies.repo.locations.cell.release.disabled           = -
 report.dependencies.repo.locations.cell.release.enabled            = Oui
 report.dependencies.repo.locations.cell.snapshot.disabled          = -
 report.dependencies.repo.locations.cell.snapshot.enabled           = Oui
-report.dependencies.repo.locations.column.artifact                 = artefact
+report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.enabled        = Oui
+report.dependencies.repo.locations.column.artifact                 = Artefact
+report.dependencies.repo.locations.column.blacklisted              = Blacklist\u00e9
 report.dependencies.repo.locations.column.release                  = D\u00e9gagement
 report.dependencies.repo.locations.column.repoid                   = R\u00e9f\u00e9rentiel ID
 report.dependencies.repo.locations.column.snapshot                 = Snapshot
