o Add missing properties.
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@678005 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_sv.properties
+++ b/src/main/resources/project-info-report_sv.properties
@@ -56,6 +56,7 @@ report.dependencies.file.details.column.packages                   = Paket
 report.dependencies.file.details.column.sealed                     = F\u00f6rseglad
 report.dependencies.file.details.column.size                       = Storlek
 report.dependencies.file.details.title                             = Beroendedetaljer
+report.dependencies.file.details.total                             = Totalt
 report.dependencies.graph.tables.licenses                          = Licenser
 report.dependencies.graph.tables.unknown                           = Ok\u00e4nt
 report.dependencies.graph.title                                    = Projektets beroendegraf
@@ -72,7 +73,10 @@ report.dependencies.repo.locations.cell.release.disabled           = -
 report.dependencies.repo.locations.cell.release.enabled            = Ja
 report.dependencies.repo.locations.cell.snapshot.disabled          = -
 report.dependencies.repo.locations.cell.snapshot.enabled           = Ja
+report.dependencies.repo.locations.cell.blacklisted.disabled       = -
+report.dependencies.repo.locations.cell.blacklisted.enabled        = Ja
 report.dependencies.repo.locations.column.artifact                 = Artifact
+report.dependencies.repo.locations.column.blacklisted              = Svartlistat
 report.dependencies.repo.locations.column.release                  = Release
 report.dependencies.repo.locations.column.repoid                   = F\u00f6rvaringsplats-ID
 report.dependencies.repo.locations.column.snapshot                 = Snapshot
@@ -234,3 +238,9 @@ report.dependencyManagement.intro.test                             = F\u00f6ljan
 report.pluginManagement.name                                       = Pluginhantering
 report.pluginManagement.description                                = Detta dokument listar de plugins som definierats genom pluginManagement.
 report.pluginManagement.title                                      = Pluginhantering f\u00f6r projektet
+report.plugins.name                                                = Projektets plugins
+report.plugins.description                                         = Detta dokument listar byggplugins och rapportplugins som anv\u00e4nds av detta projekt.
+report.plugins.title                                               = Projektets byggplugins
+report.plugins.report.title                                        = Projektets rapportplugins
+report.plugins.nolist                                              = Det finns inga byggplugins definierade f\u00f6r detta projekt.
+report.plugins.report.nolist                                       = Det finns inga rapportplugins definierade f\u00f6r detta projekt.
