o internationalize kB, MB, GB according the internationalize SI units o added French translation for ko Mo Go
git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@678765 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -55,6 +55,9 @@ report.dependencies.file.details.column.jdkrev                     = R\u00e9visi
 report.dependencies.file.details.column.packages                   = Packages
 report.dependencies.file.details.column.sealed                     = Scell\u00e9
 report.dependencies.file.details.column.size                       = Taille
+report.dependencies.file.details.column.size.gb                    = Go
+report.dependencies.file.details.column.size.mb                    = Mo
+report.dependencies.file.details.column.size.kb                    = ko
 report.dependencies.file.details.title                             = D\u00e9tails du fichier de d\u00e9pendances
 report.dependencies.file.details.total                             = Total
 report.dependencies.graph.tables.licenses                          = Licences
