--- a/src/main/resources/project-info-report_sv.properties
+++ b/src/main/resources/project-info-report_sv.properties
@@ -58,7 +58,7 @@ report.dependencies.file.details.column.size                       = Storlek
 report.dependencies.file.details.title                             = Beroendedetaljer
 report.dependencies.file.details.total                             = Totalt
 report.dependencies.graph.tables.licenses                          = Licenser
-report.dependencies.graph.tables.unknown                           = Ok\u00e4nt
+report.dependencies.graph.tables.unknown                           = Ok\u00e4nd
 report.dependencies.graph.title                                    = Projektets beroendegraf
 report.dependencies.graph.tree.title                               = Beroendetr\u00e4d
 report.dependencies.intro.compile                                  = F\u00f6ljande \u00e4r en lista \u00f6ver projektets kompileringsberoenden (beroendetyp compile). Dessa beroenden kr\u00e4vs f\u00f6r att kunna kompilera och k\u00f6ra projektet:
@@ -76,7 +76,7 @@ report.dependencies.repo.locations.cell.snapshot.enabled           = Ja
 report.dependencies.repo.locations.cell.blacklisted.disabled       = -
 report.dependencies.repo.locations.cell.blacklisted.enabled        = Ja
 report.dependencies.repo.locations.column.artifact                 = Artifact
-report.dependencies.repo.locations.column.blacklisted              = Svartlistat
+report.dependencies.repo.locations.column.blacklisted              = Svartlistad
 report.dependencies.repo.locations.column.release                  = Release
 report.dependencies.repo.locations.column.repoid                   = F\u00f6rvaringsplats-ID
 report.dependencies.repo.locations.column.snapshot                 = Snapshot
