--- a/src/main/resources/project-info-report_fr.properties
+++ b/src/main/resources/project-info-report_fr.properties
@@ -46,7 +46,7 @@ report.dependencies.column.isNotOptional                           = Non
 report.dependencies.column.type                                    = Type
 report.dependencies.column.url                                     = URL
 report.dependencies.column.version                                 = Version
-report.dependencies.description                                    = Ce document liste les d\u00e9pendances du projet et fournit les informations sur chaque d\u00e9pendance.
+report.dependencies.description                                    = Ce document liste les d\u00e9pendances du projet et fournit des informations sur chaque d\u00e9pendance.
 report.dependencies.file.details.column.classes                    = Classes
 report.dependencies.file.details.column.debug                      = Debug
 report.dependencies.file.details.column.entries                    = Entr\u00e9es
@@ -80,7 +80,7 @@ report.dependencies.repo.locations.cell.blacklisted.disabled       = -
 report.dependencies.repo.locations.cell.blacklisted.enabled        = Oui
 report.dependencies.repo.locations.column.artifact                 = Artefact
 report.dependencies.repo.locations.column.blacklisted              = Blacklist\u00e9
-report.dependencies.repo.locations.column.release                  = D\u00e9gagement
+report.dependencies.repo.locations.column.release                  = Release
 report.dependencies.repo.locations.column.repoid                   = R\u00e9f\u00e9rentiel ID
 report.dependencies.repo.locations.column.snapshot                 = Snapshot
 report.dependencies.repo.locations.column.url                      = URL
@@ -239,9 +239,9 @@ report.dependencyManagement.intro.runtime                          = Ce qui suit
 report.dependencyManagement.intro.system                           = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e system pour ce projet. Ces d\u00e9pendances sont requises pour compiler l\u0092application :
 report.dependencyManagement.intro.test                             = Ce qui suit est la liste des d\u00e9pendances d\u00e9finies dans dependencyManagement de port\u00e9e test pour ce projet. Ces d\u00e9pendances sont requises seulement pour compiler et ex\u00e9cuter les tests unitaires de l\u0092application :
 report.pluginManagement.name                                       = Gestion des plugins
-report.pluginManagement.description                                = Ce document liste les plugins d\u00e9finis \u00e0 travers plugins.
-report.pluginManagement.title                                      = Gestion des plugins du project
-report.plugins.name                                                = Plugins du projets
+report.pluginManagement.description                                = Ce document liste les plugins d\u00e9finis par pluginManagement.
+report.pluginManagement.title                                      = Gestion des plugins du projet
+report.plugins.name                                                = Plugins du projet
 report.plugins.description                                         = Ce document liste les plugins de type build et rapport utilis\u00e9s par ce projet.
 report.plugins.title                                               = Plugins du projet de type build
 report.plugins.report.title                                        = Plugins du projet de type rapport
